--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spring Data JPA - Complete Guide</title>
+    <meta name="description" content="Complete guide on Spring Data JPA — includes features, best practices, JPQL, native SQL, sorting, transactions and more.">
+<meta name="keywords" content="Spring Data JPA, JPA, Spring Boot, repository, JPQL, native query, sorting, transactions">
+<title>Spring Data JPA Guide | Spring In Action</title>
     <style>
         * {
             margin: 0;
@@ -896,3 +898,4 @@ spring.jpa.properties.hibernate.format_sql=true</code>
     </script>
 </body>
 </html>
+
